# CodeForge

./: CMakeLists.txt  CodeForge  README.md  build.sh  imgui.ini
.github/workflows/: msbuild.yml
examples/: calculator.cpp
include/: .fuse_hidden000000c200000001  .fuse_hidden000002b300000003  Application.h  CodeEditor.h  CodexManager.h  CompilerEngine.h  GitManager.h
src/: .fuse_hidden000000d000000005  .fuse_hidden000000d200000004  Application.cpp  BuildSystem.cpp  BuildSystem.h  CodeEditor.cpp  CodexManager.cpp  CompilerEngine.cpp  FileManager.cpp  FileManager.h  GitManager.cpp  ProjectManager.cpp  ProjectManager.h  SettingsManager.cpp  SettingsManager.h  UIManager.cpp  UIManager.h  main.cpp
